fixed too big player photos error in match page

--- a/src/main/webapp/static/css/match.css
+++ b/src/main/webapp/static/css/match.css
@@ -36,6 +36,10 @@
 	position: relative;
 }
 
+.pitch img {
+	width: 100%;
+}
+
 #match>.main>.pitch>img {
 	height: 40vw;
 }
